# feishu-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  evaluation.xml
feishu-mcp/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.yaml
feishu-mcp/scripts/: install.sh
feishu-mcp/src/: config.rs  lib.rs  main.rs
feishu-mcp/src/auth/: mod.rs  oauth.rs  token_store.rs
feishu-mcp/src/feishu/: client.rs  error.rs  mod.rs  types.rs
feishu-mcp/src/mcp/: mod.rs  types.rs
feishu-mcp/src/middleware/: error_handler.rs  mod.rs  rate_limit.rs
feishu-mcp/src/tools/: documents.rs  messages.rs  mod.rs  tasks.rs
feishu-mcp/tests/: mcp_protocol_test.rs
